--- a/config/models/endpoints.yml
+++ b/config/models/endpoints.yml
@@ -6,7 +6,7 @@ providers:
   openai:
     type: openai
     base_url: https://api.openai.com/v1
-    model: gpt-4o-mini
+    model: gpt-5-mini
     api_key: ${OPENAI_API_KEY}
     stream: false
     temperature: 0.7
