--- a/config/prompts/runtime.rules.yml
+++ b/config/prompts/runtime.rules.yml
@@ -18,3 +18,18 @@ system: |
   - 질문은 열린 질문으로
   - 강요나 압박 금지
   - 대화의 자연스러운 흐름 유지
+  
+  모드:
+    play:
+      max_sentences: 2
+      max_questions: 1
+      banned_phrases:
+        - "무슨 의미로 한 건지"
+        - "설명해줄래"
+        - "감정이 어떤지"
+      style_hints:
+        - "받아치기 우선"
+        - "장문 금지"
+    normal:
+      style_hints:
+        - "간결/중복 금지"
